--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,6 +3,7 @@ delete_merged_file: false
   #it 'merges the Rmd files first. Keep that for now, because it could be helpful.
 output_dir: "docs" #that's where the htmls etc go; we could host it from there
 rmd_files:
-  html: ["index.Rmd", "introduction_overview.Rmd", "survey_design.Rmd", "experiments_trials_design.Rmd",  "presentation_method_discussion.Rmd", README.md]
+  html: ["index.Rmd", "introduction_overview.Rmd", "data_and_code.Rmd", "present.Rmd", "presentation_method_discussion.Rmd", "survey_design.Rmd", "experiments_trials_design.Rmd",  "basic_stats.Rmd", "modeling.Rmd", "causal_inf.Rmd", "fermi.Rmd", "README.md"]
 clean: ["support"]
+
 
