incorporate @Jimbilben's power analysis work into Bookdown
@Jimbilben  I incorporated this as an 'appendix', but we might ultimately move (part of?) it into the power analysis section

I've read, commented on, and made some adjustments (look on these as suggestions, we can revert back) on the first half. Now I'm hoping to dig into the 'concrete' (code) example.

If you open any of the doc/*.html files (in a browser) you can see how it looks. I think the 'cold folding' is a pretty big advantage over the pdf

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,9 +1,9 @@
 book_filename: "rp_methods_book"
-delete_merged_file: false
-  #it 'merges the Rmd files first. Keep that for now, because it could be helpful.
+delete_merged_file:   
+  #it 'merges the Rmd files first. Normally I keep it as it can be helpful, but I'm having it delete for now to avoid confusion for people new to this
 output_dir: "docs" #that's where the htmls etc go; we could host it from there
 rmd_files:
-  html: ["index.Rmd", "introduction_overview.Rmd", "data_and_code.Rmd", "present.Rmd", "presentation_method_discussion.Rmd", "survey_design.Rmd", "experiments_trials_design.Rmd",  "basic_stats.Rmd", "modeling.Rmd", "causal_inf.Rmd", "fermi.Rmd", "README.md"]
+  html: ["index.Rmd", "introduction_overview.Rmd", "data_and_code.Rmd", "present.Rmd", "presentation_method_discussion.Rmd", "survey_design.Rmd", "experiments_trials_design.Rmd",  "basic_stats.Rmd", "modeling.Rmd", "causal_inf.Rmd", "fermi.Rmd", "power_analysis_framework_2.Rmd", "README.md"]
 clean: ["support"]
 
 
