--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -3,7 +3,7 @@ delete_merged_file: TRUE
   #it 'merges the Rmd files first. Normally I keep it as it can be helpful, but I'm having it delete for now to avoid confusion for people new to this
 output_dir: "docs" #that's where the htmls etc go; we could host it from there
 rmd_files:
-  html: ["index.Rmd", "introduction_overview.Rmd", "data_and_code.Rmd", "present.Rmd", "presentation_method_discussion.Rmd", "experiments_trials_design.Rmd",  "basic_stats.Rmd", "modeling.Rmd", "classification_model_notes.Rmd", "causal_inf.Rmd", "fermi.Rmd", "power_analysis_framework_2.Rmd", "README.md"]
+  html: ["index.Rmd", "introduction_overview.Rmd", "data_and_code.Rmd", "present.Rmd", "presentation_method_discussion.Rmd", "experiments_trials_design.Rmd", "from_ea_market_testing/qualitative-design-issues.md", "basic_stats.Rmd", "ml_modeling.Rmd", "time_series_predict.Rmd", "time_series_application.Rmd", "classification_model_notes.Rmd", "causal_inf.Rmd", "fermi.Rmd", "power_analysis_framework_2.Rmd", "README.md"]
   #html: ["index.Rmd", "introduction_overview.Rmd"]
 clean: ["support"]
 
