a bit of reorg, some content on attempting a single framework for frequentist, simulation, equivalence testing, bayesian

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,10 +8,11 @@ rmd_files: ["index.Rmd",
   "presentation_method_discussion.Rmd",
   "survey_designs_methods.Rmd",
   "experiments_trials_design.Rmd",
-  "from_ea_market_testing/qualitative-design-issues_ed.md",
+  "qualitative-design-issues_plus.md",
   "basic_stats.Rmd",
   "ml_modeling.Rmd",
-  "time_series_predict.Rmd", "time_series_application.Rmd",
+  "time_series_predict.Rmd", 
+  "time_series_application.Rmd",
   "classification_model_notes.Rmd",
   "causal_inf.Rmd",
   "fermi.Rmd",
