Adding notes on ML modelling vignette @daaronr

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ from_ea_market_testing/experimental-design-methods-issues.md
 from_ea_market_testing/qualitative-design-issues.md
 time_series.md
 reinstein_bibtex.bib
+.DS_Store
