--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,15 +26,16 @@ book:
       chapters:
         - chapters/basic_stats.qmd
         - chapters/ml_modeling.qmd
-        - chapters/time_series_predict.qmd
+        #- chapters/time_series_predict.qmd
         - chapters/time_series_application.qmd
         - chapters/classification_model_notes.qmd
         - chapters/causal_inf.qmd
-  appendices:
-    - chapters/fermi.qmd
-    - chapters/other_sections.qmd
-    - chapters/power_analysis_framework_2.qmd
-    - from_ea_market_testing/binary_trial_computations_redacted_ed.qmd
+    - part: "Other topics and worked examples"
+      chapters:
+        - chapters/fermi.qmd
+        - chapters/other_sections.qmd
+        - chapters/power_analysis_framework_2.qmd
+        - from_ea_market_testing/binary_trial_computations_redacted_ed.qmd
   reader-mode: true
 
 comments:
