--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,20 +3,22 @@ project:
   output-dir: docs
 
 book:
-  title: "Rethink Priorities on surveys, experiments, and data analysis; methodology, protocols and templates"
+  title: "Rethink Priorities: surveys/experiment design, analysis; methods, protocols, templates"
   author: "David Reinstein (most content atm), Willem Sleegers, Jamey Elsey"
   repo-url: https://github.com/ /rethinkpriorities/methodology-statistics-design
   repo-actions: [edit, issue]
   chapters:
-    - index.qmd
-    - part: "Presentation, code organization"
+    - part: "Introduction, protocols/style"
       chapters:
+        - index.qmd
         - chapters/coding_data.qmd
         - chapters/presentation_method_discussion.qmd
-    - part: "Designing surveys and trials"
+    - part: "Surveys/trial design"
       chapters:
         - chapters/survey_designs_methods.qmd
         - chapters/experiments_trials_design.qmd
+        - chapters/exp_design_quant.qmd
+        - chapters/power_analysis_framework_2.qmd
         - chapters/qualitative-design-issues_plus.md
     - part: "Statistics and modeling"
       chapters:
@@ -27,11 +29,10 @@ book:
         - chapters/time_series_application.qmd
         - chapters/classification_model_notes.qmd
         - chapters/causal_inf.qmd
-    - part: "Other topics and worked examples"
+    - part: "Other, worked examples"
       chapters:
         - chapters/fermi.qmd
         - chapters/other_sections.qmd
-        - chapters/power_analysis_framework_2.qmd
         - from_ea_market_testing/binary_trial_computations_redacted_ed.qmd
   reader-mode: true
 
